# colorlook

./: Cargo.toml  README.md  build.rs
assets/: icon.rc
assets/presets/: Japanese.json  WebStandard.json
src/: color_item.rs  main.rs  mainwindow.rs  utils.rs
src/add/: customized.rs  extract.rs  mod.rs  picker.rs  preset.rs
src/utils/: fonts.rs  mod.rs  toast.rs
src/utils/auto_palette/: algorithm.rs  image.rs  mod.rs  palette.rs  swatch.rs  theme.rs
src/utils/auto_palette/color/: color_struct.rs  delta_e.rs  lab.rs  rgb.rs  white_point.rs  xyz.rs
src/utils/auto_palette/math/: distance.rs  mod.rs  number.rs  point.rs  stats.rs
src/utils/auto_palette/math/clustering/: algorithm.rs  cluster.rs  cmp.rs
src/utils/auto_palette/math/clustering/dbscan/: algorithm.rs  label.rs
src/utils/auto_palette/math/clustering/gmeans/: algorithm.rs
src/utils/auto_palette/math/clustering/hierarchical/: algorithm.rs  dendrogram.rs  linkage.rs  node.rs
src/utils/auto_palette/math/neighbors/: neighbor.rs  search.rs
src/utils/auto_palette/math/neighbors/kdtree/: node.rs  search.rs
src/utils/auto_palette/math/neighbors/linear/: search.rs
