[package]
name = "colorlook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
eframe = { version = "0.29", default-features = false, features = [
    "glow",
    "accesskit",
] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
egui-toast = "0.15"
egui_file = "0.19"
egui_dock = "0.14"
image = { version = "*", features = ["jpeg","png"] }
rand = "*"
include-flate = "*"
lazy_static = "*"
regex = "*"
num-traits = "*"
statrs     = "*"

[build-dependencies]
winres = "*"

[profile.release]
strip = true
lto = "thin"
panic = "abort"
